# LoanWizard

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  QNA.md  README.md  SUBMISSION.md  TODO_INTEGRATION.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/ml-service/: .dockerignore  Dockerfile  README.md  TODO_INTEGRATION.md  docker-compose.yml  pyproject.toml
apps/ml-service/app/: deps.py  main.py  schemas.py
apps/ml-service/app/db/: models.py  session.py
apps/ml-service/app/models/fraud_mlp/: features.py  fraud_model.keras  fraud_scaler.npz
apps/ml-service/app/models/prompts/: persona_prompt.txt
apps/ml-service/app/models/risk_mlp/: features.py  keras_model.h5  keras_model.keras  scaler_params.npz  train.py
apps/ml-service/app/routes/: debug.py  decisions.py  drift.py  fairness.py  health.py  mock.py  models_route.py  offer.py  transcribe.py
apps/ml-service/app/services/: bureau_mock.py  drift_tracker.py  event_emitter.py  fraud_scorer.py  model_loader.py  model_registry.py  offer_builder.py  persona_classifier.py  policy_engine.py  reason_narrator.py  risk_scorer.py  transcriber.py
apps/ml-service/data/: fairness_cohort.json  synthetic.csv
apps/ml-service/scripts/: generate_synthetic_data.py  seed_fairness_cohort.py  train_fraud_model.py  train_risk_model.py
apps/ml-service/tests/: test_bureau_merge.py  test_decision_replay.py  test_fairness.py  test_fraud_features.py  test_model_loader.py  test_offer_math.py  test_policy.py  test_reason_narrator.py  test_risk_features.py  test_transcribe.py
docs/: DEPLOYMENT.md  (+4 more)
(+96 files in other folders)
