[project]
name = "ml-service"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "pydantic==2.7.0",
  "tensorflow==2.16.1",
  "numpy==1.26.4",
  "pandas==2.2.2",
  "scikit-learn==1.4.2",
  "sqlalchemy==2.0.29",
  "psycopg2-binary==2.9.9",
  "httpx==0.27.0",
  "python-dotenv==1.0.1",
  "redis==5.0.4",
  "jinja2==3.1.4",
]

[project.optional-dependencies]
gemini = ["google-generativeai==0.5.2"]
audio = ["faster-whisper==1.0.3"]
dev = ["pytest==8.1.1", "pytest-asyncio==0.23.6", "ruff==0.4.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
